--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/react": "^16.9.11",
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.4"
@@ -26,5 +27,8 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "moduleNameMapper": {
+    "^consts/(.*)": "<rootDir>/src/consts/$1"
   }
 }
