--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.23",
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.4"
@@ -29,6 +30,11 @@
     "preset": "react-native"
   },
   "moduleNameMapper": {
-    "^consts/(.*)": "<rootDir>/src/consts/$1"
+    "^consts/(.*)": "<rootDir>/src/consts/$1",
+    "^components/(.*)": "<rootDir>/src/components/$1",
+    "^features/(.*)": "<rootDir>/src/features/$1",
+    "^config/(.*)": "<rootDir>/src/config/$1",
+    "^services/(.*)": "<rootDir>/src/services/$1",
+    "^types/(.*)": "<rootDir>/src/types/$1"
   }
 }
