--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.23",
     "axios": "^0.19.0",
+    "constate": "^1.3.2",
     "react": "16.9.0",
     "react-native": "0.61.4"
   },
