--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-native": "^0.60.23",
     "axios": "^0.19.0",
     "constate": "^1.3.2",
+    "lodash.debounce": "^4.0.8",
     "react": "16.9.0",
     "react-native": "0.61.4"
   },
